Add status endpoint
